# transit-tracker-tui

./: .accurate_config.yaml.swp  .coverage  .dockerignore  .geminiignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  GEMINI.md  PLAN.md  README.md  TESTING.md  accurate_config.yaml  config.yaml  docker-compose.compare.yml  docker_entrypoint.py  ferry_raw.json  hardware_capture.json  pyproject.toml  reproduce_issue.py  test_isolation_config.yaml  test_ws.py  transit-tracker.nomad.hcl  validate_home.py
.claude/: settings.local.json
.claude/hooks/: session-start.sh
.github/scripts/: gemini_review.py
.github/workflows/: build.yml  claude-review.yml  docker.yml  gemini.yml  gtfs-pr-comment.yml  lint.yml  pr-newspaper.yml
.kiro/settings/: mcp.json
.kiro/specs/docker-container-packaging/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: board-config.md  development.md  docker.md  gui-tray.md  hardware.md  reference-container.md  testing.md
compare/: INTERFACE.md  feeds.yaml  proxy_config.yaml
data/: needle_stops.yaml
docker/: entrypoint.sh
docs/: updates.md
notebooks/: walkshed_explorer.ipynb
powers/marimo/: POWER.md  mcp.json
scripts/: auto_crop.py  average_timelapse.py  build_route_map.py  build_stations_geojson.py  capture_cam.py  capture_hardware.py  capture_proxy_diff.py  ci_local.sh  compare_containers.py  compare_direct.py  compare_feeds.py  deploy.sh  diagnose_gui.py  download_gtfs.py  flash_device_config.py  generate_dimming_schedule.py  get_sim_output.py  monitor_reconnects.sh  package.sh  probe_hardware.py  process_hardware_img.py  read_device_config.py  render_sim.py  start_container.sh  stop_container.sh  validate_influx.sh  verify_cloud_equivalence.py  verify_launch.py  verify_offset.py  watch_and_average.py
src/transit_tracker/: __init__.py  capture.py  cli.py  config.py  display.py  gtfs_schedule.py  gui.py  hardware.py  logging.py  metrics.py  monitor.py  simulator.py  tile.py  transit_api.py  tui.py  web.py
src/transit_tracker/network/: websocket_server.py  websocket_service.py
src/transit_tracker/notifications/: ntfy.py
src/transit_tracker/observability/: __init__.py  influxdb_writer.py
src/transit_tracker/templates/: dashboard.html  index.html  monitor.html  spec.html
src/transit_tracker/web/: __init__.py  api_handlers.py  pages.py  server.py  spec.py  tile_cache.py
tests/: check_window.py  conftest.py  diagnose_gui.py  quick_ws_test.py  test_brightness.py  test_captures.py  test_cli.py  test_cloud_equivalence.py  test_config.py  test_config_persistence.py  test_configurator_parity.py  test_container.py  test_daylight.py  test_dimming.py  test_dimming_reload.py  test_display.py  test_firmware_contracts.py  test_firmware_correctness.py  test_flashing.py  test_gtfs.py  test_gtfs_only_warning.py  test_gui_init.py  test_gui_profiles.py  test_influxdb_integration.py  test_influxdb_writer.py  test_insitu_hardware.py  test_live_config_isolation.py  test_logging_module.py  test_metrics.py  test_network.py  test_profiles_menu.py  test_protocol_comparison.py  test_proxy_equivalence.py  test_reconnect_storm_invariant.py  test_serial_protocol.py  test_service_alerts.py  test_service_isolation.py  test_simulator.py  test_simulator_mock_equivalence.py  test_station_map.py  (+10 more)
