[project]
name = "transit-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tommy Doerr", email = "tommy.b.doerr@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "bdfparser>=2.2.0",
    "httpx>=0.28.1",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pyobjc-framework-quartz>=12.1",
    "pyserial>=3.5",
    "pyyaml>=6.0.3",
    "questionary>=2.1.1",
    "rich>=14.3.3",
    "rumps>=0.4.0",
    "websockets>=16.0",
]

[project.scripts]
transit-tracker = "transit_tracker.cli:main"
transit-tracker-gui = "transit_tracker.gui:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
