[project]
name = "transit-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tommy Doerr", email = "tommy.b.doerr@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "astral>=3.2",
    "bdfparser>=2.2.0",
    "esptool>=5.2.0",
    "httpx>=0.28.1",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pyobjc-framework-quartz>=12.1",
    "pyserial>=3.5",
    "pyyaml>=6.0.3",
    "questionary>=2.1.1",
    "rich>=14.3.3",
    "rumps>=0.4.0",
    "websockets>=16.0",
]

[project.scripts]
transit-tracker = "transit_tracker.cli:main"
transit-tracker-gui = "transit_tracker.gui:main"
transit-tracker-capture = "transit_tracker.capture:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.9.9",
]

[tool.ruff]
# Target Python 3.14 as specified in [project]
target-version = "py313" # Ruff doesn't support py314 yet, so we use the closest
line-length = 88

[tool.ruff.lint]
# Select rules: E (Error), F (Pyflakes), I (isort), B (flake8-bugbear)
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# web.py contains HTML/JS/CSS template strings where line length is impractical
"src/transit_tracker/web.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
markers = [
    "docker: marks tests that require Docker (deselect with '-m \"not docker\"')",
]
